RESOLVED FIXED191671
IndexedDB.IndexedDBTempFileSize API test times out with process prewarming enabled
https://bugs.webkit.org/show_bug.cgi?id=191671
Summary IndexedDB.IndexedDBTempFileSize API test times out with process prewarming en...
Chris Dumez
Reported 2018-11-14 20:08:09 PST
IndexedDB.IndexedDBTempFileSize API test times out with process prewarming enabled: Timeout TestWebKitAPI.IndexedDB.IndexedDBTempFileSize _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. ERROR: SQLite database failed to checkpoint: database table is locked ./platform/sql/SQLiteDatabase.cpp(130) : bool WebCore::SQLiteDatabase::open(const WTF::String &, bool) _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. Attempted to create a NetworkLoad with a session (id=2) that does not exist. Testing completed, Exit status: 3
Attachments
Patch (10.13 KB, patch)
2018-11-15 09:14 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-11-14 21:16:07 PST
I know what's going on and have tests. Will upload a fix tomorrow.
Radar WebKit Bug Importer
Comment 2 2018-11-14 21:30:57 PST
Chris Dumez
Comment 3 2018-11-15 09:14:20 PST
WebKit Commit Bot
Comment 4 2018-11-15 14:01:38 PST
Comment on attachment 354944 [details] Patch Clearing flags on attachment: 354944 Committed r238250: <https://trac.webkit.org/changeset/238250>
WebKit Commit Bot
Comment 5 2018-11-15 14:01:39 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6 2018-11-16 09:09:45 PST
Comment on attachment 354944 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=354944&action=review > Source/WebKit/UIProcess/WebProcessPool.cpp:571 > + // Make sure the network process knowns about all the sessions that have been registered before it started. Typo: "knowns" instead of "knows".
Chris Dumez
Comment 7 2018-11-16 09:13:03 PST
(In reply to Darin Adler from comment #6) > Comment on attachment 354944 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=354944&action=review > > > Source/WebKit/UIProcess/WebProcessPool.cpp:571 > > + // Make sure the network process knowns about all the sessions that have been registered before it started. > > Typo: "knowns" instead of "knows". Fixed in <https://trac.webkit.org/changeset/238284>, thanks.
Note You need to log in before you can comment on or make changes to this bug.